--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,67 +1,31 @@
-name: CI
+name: Continuous Integration
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
+
   pull_request:
-    branches: [ main ]
+    branches: [main]
+
+  workflow_dispatch:
 
 jobs:
-  build_linux:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Download deps
-        run: sudo apt-get update && sudo apt-get install libx11-dev libxext-dev libxft-dev libxinerama-dev libxcursor-dev libxrender-dev libxfixes-dev libpango1.0-dev libgl1-mesa-dev libglu1-mesa-dev libxkbcommon-dev libwayland-dev wayland-protocols libdbus-1-dev
-        shell: bash
-      - uses: actions/checkout@v4
-      - uses: goto-bus-stop/setup-zig@v2
-        with:
-          version: 0.15.1
-      - name: Build
-        run: |
-          git clone https://github.com/MoAlyousef/cfltk -b fltk1.4 --recurse-submodules --depth=1
-          cd cfltk && sudo ./scripts/bootstrap_posix.sh && cd ..
-          zig build -Dzfltk-build-examples=true
-  build_macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: goto-bus-stop/setup-zig@v2
-        with:
-          version: 0.15.1
-      - name: Build
-        run: |
-          git clone https://github.com/MoAlyousef/cfltk -b fltk1.4 --recurse-submodules --depth=1
-          cd cfltk && sudo ./scripts/bootstrap_posix.sh && cd ..
-          zig build --search-prefix /usr/local -Dzfltk-build-examples=true
-  build_windows-mingw:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: msys2/setup-msys2@v2
-        with:
-          msystem: UCRT64
-          update: true
-      - shell: msys2 {0}
-        run: |
-          pacman -Sy
-          pacman --noconfirm -S $MINGW_PACKAGE_PREFIX-cmake $MINGW_PACKAGE_PREFIX-gcc $MINGW_PACKAGE_PREFIX-ninja wget unzip git --needed
-          wget https://ziglang.org/download/0.15.1/zig-x86_64-windows-0.15.1.zip
-          unzip -qq zig-x86_64-windows-0.15.1.zip
-          git clone https://github.com/MoAlyousef/cfltk -b fltk1.4 --recurse-submodules --depth=1
-          cd cfltk && ./scripts/bootstrap_posix.sh -DCMAKE_INSTALL_PREFIX=$MINGW_PREFIX && cd ..
-          zig-x86_64-windows-0.15.1/zig build --search-prefix $MINGW_PREFIX -Dzfltk-build-examples=true
-  build_windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: goto-bus-stop/setup-zig@v2
-        with:
-          version: 0.15.1
-      - uses: seanmiddleditch/gha-setup-ninja@master
-      - name: build
-        shell: bash
-        run: |
-          git clone https://github.com/MoAlyousef/cfltk -b fltk1.4 --recurse-submodules --depth=1
-          cd cfltk && cmake -Bbin -GNinja -DFLTK_BUILD_TEST=OFF -DFLTK_BUILD_EXAMPLES=OFF -DFLTK_BUILD_GL=ON -DCFLTK_USE_OPENGL=ON -DFLTK_USE_SYSTEM_LIBPNG=OFF -DFLTK_USE_SYSTEM_LIBJPEG=OFF -DFLTK_USE_SYSTEM_LIBZLIB=OFF -DFLTK_BUILD_FLUID=OFF -DFLTK_BUILD_FLTK_OPTIONS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=C:\\cfltk && cmake --build bin --config Release && cmake --install bin --config Release && cd ..
-          zig build --search-prefix C:\\cfltk -Dzfltk-build-examples=true
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Zig
+        uses: mlugg/setup-zig@v2
+
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y libx11-dev libxext-dev libxrender-dev libwayland-dev libcairo2-dev wayland-protocols libxkbcommon-dev libxft-dev libpango1.0-dev
+
+      - name: Run Linux build
+        run: zig build -Dzfltk-build-examples=true
+
+      - name: Run Windows build
+        run: zig build -Dzfltk-build-examples=true -Dtarget=x86_64-windows-gnu
+
